:sparkles: Updated some stuff